[gd_scene load_steps=3 format=3 uid="uid://c743ur8hoxsn5"]

[ext_resource type="Script" path="res://scenes/ui/card_tooltip_popup.gd" id="1_4a5ak"]
[ext_resource type="PackedScene" uid="uid://trmdo65td4t7" path="res://scenes/ui/card_menu_ui.tscn" id="2_lnopv"]

[node name="CardTooltipPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4a5ak")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.690196)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -26.0
offset_right = 75.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2

[node name="TooltipCard" type="CenterContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CardMenuUI" parent="VBoxContainer/TooltipCard" instance=ExtResource("2_lnopv")]
layout_mode = 2

[node name="CardDescription" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "Card Description Card Description Card Description 
Card Description Card Description"
fit_content = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
